e-gw/manifests/kyverno/kyverno-label-egw.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-privileged-custom-namespaces
  annotations:
    policies.kyverno.io/title: Add Privileged Label to Existing Namespaces starting with the test prefix
    policies.kyverno.io/category: Pod Security Admission
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.11.4
    policies.kyverno.io/minversion: 1.10.0
    kyverno.io/kubernetes-version: "1.28"
    policies.kyverno.io/description: >-
      This policy add the label `pod-security.kubernetes.io/enforce: privileged` to the new and existing namespaces whose names start with the string test-
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: label-privileged-namespaces
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          <(name): "poc-*"
          labels:
            pod-security.kubernetes.io/enforce: privileged
            pod-security.kubernetes.io/audit: privileged
            pod-security.kubernetes.io/warn: privileged
